修复聚焦边框颜色错误问题

--- a/css/index.css
+++ b/css/index.css
@@ -1098,154 +1098,154 @@ th, td { text-align: left; }
 
 .fo\:bc-10:focus { border-color: black; }
 
-.dk.hv\:c-1:hover, .hv\:c-1:hover .dk, .dk .hv\:c-1:hover { color: rgba(255, 255, 255, 0.1); }
+.dk.hv\:c-1:hover, .hv\:c-1 .dk:hover, .dk .hv\:c-1:hover { color: rgba(255, 255, 255, 0.1); }
 
-.dk.at\:c-1:active, .at\:c-1:active .dk, .dk .at\:c-1:active { color: rgba(255, 255, 255, 0.1); }
+.dk.at\:c-1:active, .at\:c-1 .dk:active, .dk .at\:c-1:active { color: rgba(255, 255, 255, 0.1); }
 
-.dk.fo\:c-1:focus, .fo\:c-1:focus .dk, .dk .fo\:c-1 { color: rgba(255, 255, 255, 0.1); }
+.dk.fo\:c-1:focus, .fo\:c-1 .dk:focus, .dk .fo\:c-1:active { color: rgba(255, 255, 255, 0.1); }
 
-.dk.hv\:c-2:hover, .hv\:c-2:hover .dk, .dk .hv\:c-2:hover { color: rgba(255, 255, 255, 0.2); }
+.dk.hv\:c-2:hover, .hv\:c-2 .dk:hover, .dk .hv\:c-2:hover { color: rgba(255, 255, 255, 0.2); }
 
-.dk.at\:c-2:active, .at\:c-2:active .dk, .dk .at\:c-2:active { color: rgba(255, 255, 255, 0.2); }
+.dk.at\:c-2:active, .at\:c-2 .dk:active, .dk .at\:c-2:active { color: rgba(255, 255, 255, 0.2); }
 
-.dk.fo\:c-2:focus, .fo\:c-2:focus .dk, .dk .fo\:c-2 { color: rgba(255, 255, 255, 0.2); }
+.dk.fo\:c-2:focus, .fo\:c-2 .dk:focus, .dk .fo\:c-2:active { color: rgba(255, 255, 255, 0.2); }
 
-.dk.hv\:c-3:hover, .hv\:c-3:hover .dk, .dk .hv\:c-3:hover { color: rgba(255, 255, 255, 0.3); }
+.dk.hv\:c-3:hover, .hv\:c-3 .dk:hover, .dk .hv\:c-3:hover { color: rgba(255, 255, 255, 0.3); }
 
-.dk.at\:c-3:active, .at\:c-3:active .dk, .dk .at\:c-3:active { color: rgba(255, 255, 255, 0.3); }
+.dk.at\:c-3:active, .at\:c-3 .dk:active, .dk .at\:c-3:active { color: rgba(255, 255, 255, 0.3); }
 
-.dk.fo\:c-3:focus, .fo\:c-3:focus .dk, .dk .fo\:c-3 { color: rgba(255, 255, 255, 0.3); }
+.dk.fo\:c-3:focus, .fo\:c-3 .dk:focus, .dk .fo\:c-3:active { color: rgba(255, 255, 255, 0.3); }
 
-.dk.hv\:c-4:hover, .hv\:c-4:hover .dk, .dk .hv\:c-4:hover { color: rgba(255, 255, 255, 0.4); }
+.dk.hv\:c-4:hover, .hv\:c-4 .dk:hover, .dk .hv\:c-4:hover { color: rgba(255, 255, 255, 0.4); }
 
-.dk.at\:c-4:active, .at\:c-4:active .dk, .dk .at\:c-4:active { color: rgba(255, 255, 255, 0.4); }
+.dk.at\:c-4:active, .at\:c-4 .dk:active, .dk .at\:c-4:active { color: rgba(255, 255, 255, 0.4); }
 
-.dk.fo\:c-4:focus, .fo\:c-4:focus .dk, .dk .fo\:c-4 { color: rgba(255, 255, 255, 0.4); }
+.dk.fo\:c-4:focus, .fo\:c-4 .dk:focus, .dk .fo\:c-4:active { color: rgba(255, 255, 255, 0.4); }
 
-.dk.hv\:c-5:hover, .hv\:c-5:hover .dk, .dk .hv\:c-5:hover { color: rgba(255, 255, 255, 0.5); }
+.dk.hv\:c-5:hover, .hv\:c-5 .dk:hover, .dk .hv\:c-5:hover { color: rgba(255, 255, 255, 0.5); }
 
-.dk.at\:c-5:active, .at\:c-5:active .dk, .dk .at\:c-5:active { color: rgba(255, 255, 255, 0.5); }
+.dk.at\:c-5:active, .at\:c-5 .dk:active, .dk .at\:c-5:active { color: rgba(255, 255, 255, 0.5); }
 
-.dk.fo\:c-5:focus, .fo\:c-5:focus .dk, .dk .fo\:c-5 { color: rgba(255, 255, 255, 0.5); }
+.dk.fo\:c-5:focus, .fo\:c-5 .dk:focus, .dk .fo\:c-5:active { color: rgba(255, 255, 255, 0.5); }
 
-.dk.hv\:c-6:hover, .hv\:c-6:hover .dk, .dk .hv\:c-6:hover { color: rgba(255, 255, 255, 0.6); }
+.dk.hv\:c-6:hover, .hv\:c-6 .dk:hover, .dk .hv\:c-6:hover { color: rgba(255, 255, 255, 0.6); }
 
-.dk.at\:c-6:active, .at\:c-6:active .dk, .dk .at\:c-6:active { color: rgba(255, 255, 255, 0.6); }
+.dk.at\:c-6:active, .at\:c-6 .dk:active, .dk .at\:c-6:active { color: rgba(255, 255, 255, 0.6); }
 
-.dk.fo\:c-6:focus, .fo\:c-6:focus .dk, .dk .fo\:c-6 { color: rgba(255, 255, 255, 0.6); }
+.dk.fo\:c-6:focus, .fo\:c-6 .dk:focus, .dk .fo\:c-6:active { color: rgba(255, 255, 255, 0.6); }
 
-.dk.hv\:c-7:hover, .hv\:c-7:hover .dk, .dk .hv\:c-7:hover { color: rgba(255, 255, 255, 0.7); }
+.dk.hv\:c-7:hover, .hv\:c-7 .dk:hover, .dk .hv\:c-7:hover { color: rgba(255, 255, 255, 0.7); }
 
-.dk.at\:c-7:active, .at\:c-7:active .dk, .dk .at\:c-7:active { color: rgba(255, 255, 255, 0.7); }
+.dk.at\:c-7:active, .at\:c-7 .dk:active, .dk .at\:c-7:active { color: rgba(255, 255, 255, 0.7); }
 
-.dk.fo\:c-7:focus, .fo\:c-7:focus .dk, .dk .fo\:c-7 { color: rgba(255, 255, 255, 0.7); }
+.dk.fo\:c-7:focus, .fo\:c-7 .dk:focus, .dk .fo\:c-7:active { color: rgba(255, 255, 255, 0.7); }
 
-.dk.hv\:c-8:hover, .hv\:c-8:hover .dk, .dk .hv\:c-8:hover { color: rgba(255, 255, 255, 0.8); }
+.dk.hv\:c-8:hover, .hv\:c-8 .dk:hover, .dk .hv\:c-8:hover { color: rgba(255, 255, 255, 0.8); }
 
-.dk.at\:c-8:active, .at\:c-8:active .dk, .dk .at\:c-8:active { color: rgba(255, 255, 255, 0.8); }
+.dk.at\:c-8:active, .at\:c-8 .dk:active, .dk .at\:c-8:active { color: rgba(255, 255, 255, 0.8); }
 
-.dk.fo\:c-8:focus, .fo\:c-8:focus .dk, .dk .fo\:c-8 { color: rgba(255, 255, 255, 0.8); }
+.dk.fo\:c-8:focus, .fo\:c-8 .dk:focus, .dk .fo\:c-8:active { color: rgba(255, 255, 255, 0.8); }
 
-.dk.hv\:c-9:hover, .hv\:c-9:hover .dk, .dk .hv\:c-9:hover { color: rgba(255, 255, 255, 0.9); }
+.dk.hv\:c-9:hover, .hv\:c-9 .dk:hover, .dk .hv\:c-9:hover { color: rgba(255, 255, 255, 0.9); }
 
-.dk.at\:c-9:active, .at\:c-9:active .dk, .dk .at\:c-9:active { color: rgba(255, 255, 255, 0.9); }
+.dk.at\:c-9:active, .at\:c-9 .dk:active, .dk .at\:c-9:active { color: rgba(255, 255, 255, 0.9); }
 
-.dk.fo\:c-9:focus, .fo\:c-9:focus .dk, .dk .fo\:c-9 { color: rgba(255, 255, 255, 0.9); }
+.dk.fo\:c-9:focus, .fo\:c-9 .dk:focus, .dk .fo\:c-9:active { color: rgba(255, 255, 255, 0.9); }
 
-.dk.hv\:c-10:hover, .hv\:c-10:hover .dk, .dk .hv\:c-10:hover { color: white; }
+.dk.hv\:c-10:hover, .hv\:c-10 .dk:hover, .dk .hv\:c-10:hover { color: white; }
 
-.dk.at\:c-10:active, .at\:c-10:active .dk, .dk .at\:c-10:active { color: white; }
+.dk.at\:c-10:active, .at\:c-10 .dk:active, .dk .at\:c-10:active { color: white; }
 
-.dk.fo\:c-10:focus, .fo\:c-10:focus .dk, .dk .fo\:c-10 { color: white; }
+.dk.fo\:c-10:focus, .fo\:c-10 .dk:focus, .dk .fo\:c-10:active { color: white; }
 
-.hv\:bg-1:hover, .dk .hv\:bg-1:hover { background-color: rgba(255, 255, 255, 0.04); }
+.dk.hv\:bg-1:hover, .dk .hv\:bg-1:hover { background-color: rgba(255, 255, 255, 0.04); }
 
-.at\:bg-1:active, .dk .at\:bg-1:active { background-color: rgba(255, 255, 255, 0.04); }
+.dk.at\:bg-1:active, .dk .at\:bg-1:active { background-color: rgba(255, 255, 255, 0.04); }
 
-.fo\:bg-1:focus, .dk .fo\:bg-1:focus { background-color: rgba(255, 255, 255, 0.04); }
+.dk.fo\:bg-1:focus, .dk .fo\:bg-1:focus { background-color: rgba(255, 255, 255, 0.04); }
 
-.hv\:bg-2:hover, .dk .hv\:bg-2:hover { background-color: rgba(255, 255, 255, 0.08); }
+.dk.hv\:bg-2:hover, .dk .hv\:bg-2:hover { background-color: rgba(255, 255, 255, 0.08); }
 
-.at\:bg-2:active, .dk .at\:bg-2:active { background-color: rgba(255, 255, 255, 0.08); }
+.dk.at\:bg-2:active, .dk .at\:bg-2:active { background-color: rgba(255, 255, 255, 0.08); }
 
-.fo\:bg-2:focus, .dk .fo\:bg-2:focus { background-color: rgba(255, 255, 255, 0.08); }
+.dk.fo\:bg-2:focus, .dk .fo\:bg-2:focus { background-color: rgba(255, 255, 255, 0.08); }
 
-.hv\:bg-3:hover, .dk .hv\:bg-3:hover { background-color: rgba(255, 255, 255, 0.12); }
+.dk.hv\:bg-3:hover, .dk .hv\:bg-3:hover { background-color: rgba(255, 255, 255, 0.12); }
 
-.at\:bg-3:active, .dk .at\:bg-3:active { background-color: rgba(255, 255, 255, 0.12); }
+.dk.at\:bg-3:active, .dk .at\:bg-3:active { background-color: rgba(255, 255, 255, 0.12); }
 
-.fo\:bg-3:focus, .dk .fo\:bg-3:focus { background-color: rgba(255, 255, 255, 0.12); }
+.dk.fo\:bg-3:focus, .dk .fo\:bg-3:focus { background-color: rgba(255, 255, 255, 0.12); }
 
-.hv\:bg-4:hover, .dk .hv\:bg-4:hover { background-color: rgba(255, 255, 255, 0.16); }
+.dk.hv\:bg-4:hover, .dk .hv\:bg-4:hover { background-color: rgba(255, 255, 255, 0.16); }
 
-.at\:bg-4:active, .dk .at\:bg-4:active { background-color: rgba(255, 255, 255, 0.16); }
+.dk.at\:bg-4:active, .dk .at\:bg-4:active { background-color: rgba(255, 255, 255, 0.16); }
 
-.fo\:bg-4:focus, .dk .fo\:bg-4:focus { background-color: rgba(255, 255, 255, 0.16); }
+.dk.fo\:bg-4:focus, .dk .fo\:bg-4:focus { background-color: rgba(255, 255, 255, 0.16); }
 
-.hv\:bg-5:hover, .dk .hv\:bg-5:hover { background-color: rgba(255, 255, 255, 0.2); }
+.dk.hv\:bg-5:hover, .dk .hv\:bg-5:hover { background-color: rgba(255, 255, 255, 0.2); }
 
-.at\:bg-5:active, .dk .at\:bg-5:active { background-color: rgba(255, 255, 255, 0.2); }
+.dk.at\:bg-5:active, .dk .at\:bg-5:active { background-color: rgba(255, 255, 255, 0.2); }
 
-.fo\:bg-5:focus, .dk .fo\:bg-5:focus { background-color: rgba(255, 255, 255, 0.2); }
+.dk.fo\:bg-5:focus, .dk .fo\:bg-5:focus { background-color: rgba(255, 255, 255, 0.2); }
 
-.hv\:bc-1:hover, .dk .hv\:bc-1:hover { border-color: rgba(255, 255, 255, 0.1); }
+.dk.hv\:bc-1:hover, .dk .hv\:bc-1:hover { border-color: rgba(255, 255, 255, 0.1); }
 
-.at\:bc-1:active, .dk .at\:bc-1:active { border-color: rgba(255, 255, 255, 0.1); }
+.dk.at\:bc-1:active, .dk .at\:bc-1:active { border-color: rgba(255, 255, 255, 0.1); }
 
-.fo\:bc-1:focus, .dk .fo\:bc-1:focus { border-color: rgba(255, 255, 255, 0.1); }
+.dk.fo\:bc-1:focus, .dk .fo\:bc-1:focus { border-color: rgba(255, 255, 255, 0.1); }
 
-.hv\:bc-2:hover, .dk .hv\:bc-2:hover { border-color: rgba(255, 255, 255, 0.2); }
+.dk.hv\:bc-2:hover, .dk .hv\:bc-2:hover { border-color: rgba(255, 255, 255, 0.2); }
 
-.at\:bc-2:active, .dk .at\:bc-2:active { border-color: rgba(255, 255, 255, 0.2); }
+.dk.at\:bc-2:active, .dk .at\:bc-2:active { border-color: rgba(255, 255, 255, 0.2); }
 
-.fo\:bc-2:focus, .dk .fo\:bc-2:focus { border-color: rgba(255, 255, 255, 0.2); }
+.dk.fo\:bc-2:focus, .dk .fo\:bc-2:focus { border-color: rgba(255, 255, 255, 0.2); }
 
-.hv\:bc-3:hover, .dk .hv\:bc-3:hover { border-color: rgba(255, 255, 255, 0.3); }
+.dk.hv\:bc-3:hover, .dk .hv\:bc-3:hover { border-color: rgba(255, 255, 255, 0.3); }
 
-.at\:bc-3:active, .dk .at\:bc-3:active { border-color: rgba(255, 255, 255, 0.3); }
+.dk.at\:bc-3:active, .dk .at\:bc-3:active { border-color: rgba(255, 255, 255, 0.3); }
 
-.fo\:bc-3:focus, .dk .fo\:bc-3:focus { border-color: rgba(255, 255, 255, 0.3); }
+.dk.fo\:bc-3:focus, .dk .fo\:bc-3:focus { border-color: rgba(255, 255, 255, 0.3); }
 
-.hv\:bc-4:hover, .dk .hv\:bc-4:hover { border-color: rgba(255, 255, 255, 0.4); }
+.dk.hv\:bc-4:hover, .dk .hv\:bc-4:hover { border-color: rgba(255, 255, 255, 0.4); }
 
-.at\:bc-4:active, .dk .at\:bc-4:active { border-color: rgba(255, 255, 255, 0.4); }
+.dk.at\:bc-4:active, .dk .at\:bc-4:active { border-color: rgba(255, 255, 255, 0.4); }
 
-.fo\:bc-4:focus, .dk .fo\:bc-4:focus { border-color: rgba(255, 255, 255, 0.4); }
+.dk.fo\:bc-4:focus, .dk .fo\:bc-4:focus { border-color: rgba(255, 255, 255, 0.4); }
 
-.hv\:bc-5:hover, .dk .hv\:bc-5:hover { border-color: rgba(255, 255, 255, 0.5); }
+.dk.hv\:bc-5:hover, .dk .hv\:bc-5:hover { border-color: rgba(255, 255, 255, 0.5); }
 
-.at\:bc-5:active, .dk .at\:bc-5:active { border-color: rgba(255, 255, 255, 0.5); }
+.dk.at\:bc-5:active, .dk .at\:bc-5:active { border-color: rgba(255, 255, 255, 0.5); }
 
-.fo\:bc-5:focus, .dk .fo\:bc-5:focus { border-color: rgba(255, 255, 255, 0.5); }
+.dk.fo\:bc-5:focus, .dk .fo\:bc-5:focus { border-color: rgba(255, 255, 255, 0.5); }
 
-.hv\:bc-6:hover, .dk .hv\:bc-6:hover { border-color: rgba(255, 255, 255, 0.6); }
+.dk.hv\:bc-6:hover, .dk .hv\:bc-6:hover { border-color: rgba(255, 255, 255, 0.6); }
 
-.at\:bc-6:active, .dk .at\:bc-6:active { border-color: rgba(255, 255, 255, 0.6); }
+.dk.at\:bc-6:active, .dk .at\:bc-6:active { border-color: rgba(255, 255, 255, 0.6); }
 
-.fo\:bc-6:focus, .dk .fo\:bc-6:focus { border-color: rgba(255, 255, 255, 0.6); }
+.dk.fo\:bc-6:focus, .dk .fo\:bc-6:focus { border-color: rgba(255, 255, 255, 0.6); }
 
-.hv\:bc-7:hover, .dk .hv\:bc-7:hover { border-color: rgba(255, 255, 255, 0.7); }
+.dk.hv\:bc-7:hover, .dk .hv\:bc-7:hover { border-color: rgba(255, 255, 255, 0.7); }
 
-.at\:bc-7:active, .dk .at\:bc-7:active { border-color: rgba(255, 255, 255, 0.7); }
+.dk.at\:bc-7:active, .dk .at\:bc-7:active { border-color: rgba(255, 255, 255, 0.7); }
 
-.fo\:bc-7:focus, .dk .fo\:bc-7:focus { border-color: rgba(255, 255, 255, 0.7); }
+.dk.fo\:bc-7:focus, .dk .fo\:bc-7:focus { border-color: rgba(255, 255, 255, 0.7); }
 
-.hv\:bc-8:hover, .dk .hv\:bc-8:hover { border-color: rgba(255, 255, 255, 0.8); }
+.dk.hv\:bc-8:hover, .dk .hv\:bc-8:hover { border-color: rgba(255, 255, 255, 0.8); }
 
-.at\:bc-8:active, .dk .at\:bc-8:active { border-color: rgba(255, 255, 255, 0.8); }
+.dk.at\:bc-8:active, .dk .at\:bc-8:active { border-color: rgba(255, 255, 255, 0.8); }
 
-.fo\:bc-8:focus, .dk .fo\:bc-8:focus { border-color: rgba(255, 255, 255, 0.8); }
+.dk.fo\:bc-8:focus, .dk .fo\:bc-8:focus { border-color: rgba(255, 255, 255, 0.8); }
 
-.hv\:bc-9:hover, .dk .hv\:bc-9:hover { border-color: rgba(255, 255, 255, 0.9); }
+.dk.hv\:bc-9:hover, .dk .hv\:bc-9:hover { border-color: rgba(255, 255, 255, 0.9); }
 
-.at\:bc-9:active, .dk .at\:bc-9:active { border-color: rgba(255, 255, 255, 0.9); }
+.dk.at\:bc-9:active, .dk .at\:bc-9:active { border-color: rgba(255, 255, 255, 0.9); }
 
-.fo\:bc-9:focus, .dk .fo\:bc-9:focus { border-color: rgba(255, 255, 255, 0.9); }
+.dk.fo\:bc-9:focus, .dk .fo\:bc-9:focus { border-color: rgba(255, 255, 255, 0.9); }
 
-.hv\:bc-10:hover, .dk .hv\:bc-10:hover { border-color: white; }
+.dk.hv\:bc-10:hover, .dk .hv\:bc-10:hover { border-color: white; }
 
-.at\:bc-10:active, .dk .at\:bc-10:active { border-color: white; }
+.dk.at\:bc-10:active, .dk .at\:bc-10:active { border-color: white; }
 
-.fo\:bc-10:focus, .dk .fo\:bc-10:focus { border-color: white; }
+.dk.fo\:bc-10:focus, .dk .fo\:bc-10:focus { border-color: white; }
 
 /*# sourceMappingURL=index.css.map */
