--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -39,5 +39,5 @@ $border-color-dark: #ffffff;  // 深色模式下边框颜色
 // 颜色的变化范围 例如 5: rgba(..., 0.5)
 $text-color-value: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
 $bg-color-value: 1, 2, 3, 4, 5;    // 背景的透明度为：实际数值 / 25
-$border-color-value: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10; 
+$border-color-value: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10; 
 
