--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@ ul, ol { list-style-type: none; }
 
 a { color: inherit; text-decoration: none; }
 
-input, button, textarea, select, button { margin: 0; padding: 0; border-width: 1px; border-color: transparent; color: inherit; font-size: inherit; outline: none; background-color: transparent; font-family: inherit; box-sizing: border-box; }
+input, button, textarea, select, button { margin: 0; padding: 0; border-width: 1px; border-color: transparent; color: inherit; font-size: inherit; outline: none; background-color: transparent; font-family: inherit; box-sizing: border-box; appearance: none; -webkit-appearance: none; }
 
 ::placeholder { color: inherit; opacity: 0.6; }
 
