--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,5 +8,5 @@
 @import 'box-shadow.scss';
 @import 'other.scss';
 
-@import 'interactive.scss';
+@import 'status.scss';
 @import 'media-query.scss';
