--- a/scss/init.scss
+++ b/scss/init.scss
@@ -21,7 +21,7 @@ input, button, textarea, select, button{
 
 ::placeholder{color: inherit;opacity: 0.6;}
 
-img, svg{vertical-align: middle;}
+img, svg, canvas{vertical-align: middle;}
 
 table{border-collapse: collapse;border-spacing: 0;}
 
