增加不同状态下字体加粗下划线等。

--- a/scss/status.scss
+++ b/scss/status.scss
@@ -1,5 +1,10 @@
 @import './variable';
 
+.h\:.a, .a\:.a, .f\:.a{cursor: pointer;}
+.h\:.b, .a\:.b, .f\:.b{font-weight: bold;}
+.h\:.u, .a\:.u, .f\:.u{text-decoration: underline;}
+.h\:.i, .a\:.i, .f\:.i{font-style: italic;}
+
 @each $n in $text-color-value {
   $c: transparentize($text-color, 1 - $n / 10);
   .h\:c-#{$n}:hover{color: $c}
