--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -49,4 +49,11 @@ $bg-color-value: 1, 2, 3, 4, 5;    // 背景的透明度为：实际数值 / 25
 $border-color-value: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10; 
 
 // media query
-// $sm: ;
+$media-query: (
+  xl: 9999,
+  lg: 1920,
+  md: 1366,
+  sm: 1000,
+  xs: 768,
+)
+
