优化了项目结构

--- a/scss/border/border.scss
+++ b/scss/border/border.scss
@@ -1,4 +1,4 @@
-@import './variable';
+@import '../variable';
 
 .bd, .bx, .by, .bt, .br, .bb, .bl{border-width: 0;border-style: solid;}
 .bd{border-width: 1px;}
