--- a/scss/layout/grid.scss
+++ b/scss/layout/grid.scss
@@ -1,4 +1,4 @@
-@import './variable';
+@import '../variable';
 
 .gfr{display: grid;grid-auto-flow: row;}
 .gfc{display: grid;grid-auto-flow: column;}
