--- a/scss/background/bg-image.scss
+++ b/scss/background/bg-image.scss
@@ -1,8 +1,11 @@
-.bg-f{background-color: #fff;}
-.dk .bg-f, .dk.bg-f{background-color: #222;}
-
 .bg-cover{background-size: cover;}
 .bg-cont{background-size: contain;}
 .bg-full{background-size: 100% 100%;}
+
 .bg-center{background-position: center;}
+.bg-left{background-position: left;}
+.bg-top{background-position: top;}
+.bg-right{background-position: right;}
+.bg-bottom{background-position: bottom;}
+
 .bg-norept{background-repeat: no-repeat;}
