--- a/scss/layout/layout.scss
+++ b/scss/layout/layout.scss
@@ -1,4 +1,4 @@
-@import './variable';
+@import '../variable';
 
 .db{display: block;}
 .dn{display: none;}
@@ -12,21 +12,6 @@
 .pf{position: fixed;}
 .pa{position: absolute;}
 
-.fr{display: flex;flex-direction: row;}
-.fc{display: flex;flex-direction: column;}
-.fw{flex-wrap: wrap;}
-
-@for $i from 1 through $flex {
-  .f-#{$i}{flex: #{$i};}
-}
-
-.as{align-items: flex-start;}
-.ac{align-items: center;}
-.ae{align-items: flex-end;}
-
-.js{justify-content: flex-start;}
-.jc{justify-content: center;}
-.je{justify-content: flex-end;}
 .ct{display: flex;align-items: center;justify-content: center;} // center
 
 .tl{text-align: left;}
@@ -59,8 +44,3 @@
 
 .pre{white-space: pre-wrap}
 .tlf{table-layout: fixed;}
-
-.a{cursor: pointer;}
-.b{font-weight: bold;}
-.u{text-decoration: underline;}
-.i{font-style: italic;}
