--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,13 +1,16 @@
 @import 'init';                             // 初始化样式
 
 @import 'layout/layout';                    // 常用的布局属性，绝对布局，超出滚动，宽度占满，等。
+@import 'layout/layout-media';              // 常用的布局属性的响应式
 @import 'layout/flex';                      // flex 布局
 @import 'layout/flex-media';                // flex 布局响应式
 @import 'layout/grid';                      // grid 布局
 @import 'layout/grid-media';                // grid 布局响应式
 
 @import 'margin-padding/margin';            // margin
+@import 'margin-padding/margin-media';      // margin 响应式
 @import 'margin-padding/padding';           // padding
+@import 'margin-padding/padding-media';     // padding 响应式
 
 @import 'font/font-size';                   // 文字大小
 @import 'font/font-style';                  // 文字加粗斜体等
