--- a/scss/font/font-color.scss
+++ b/scss/font/font-color.scss
@@ -2,5 +2,8 @@
 
 @each $n in $text-color-value {
   .c-#{$n}{color: transparentize($text-color, 1 - $n / 10)}
-  .c-lt-#{$n}{color: transparentize($text-color-dark, 1 - $n / 10)}
+
+  @each $key, $val in $colors{
+    .c-#{$key}-#{$n}{color: transparentize($val, 1 - $n / 10)}
+  }
 }
