--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -36,17 +36,21 @@ $bg-color-dark: #ffffff;      // 深色模式下背景颜色
 $border-color: #000000;       // 边框颜色
 $border-color-dark: #ffffff;  // 深色模式下边框颜色
 
-// $blue: #008cff;
-// $cyan: #00f1dd;
-// $green: #00d369;
-// $yellow: #ffff00;
-// $orange: #ffbb00;
-// $red: #ff4111;
+// 此处的颜色并不会收黑色模式的影响
+$colors: (
+  white: #ffffff,
+  blue: #008cff,
+  cyan: #00f1dd,
+  green: #00d369,
+  yellow: #ffff00,
+  orange: #ffbb00,
+  red: #ff4111,
+);
 
 // 颜色的变化范围 例如 5: rgba(..., 0.5)
-$text-color-value: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
+$text-color-value: 2, 4, 6, 8, 10;
 $bg-color-value: 1, 2, 3, 4, 5;    // 背景的透明度为：实际数值 / 25
-$border-color-value: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10; 
+$border-color-value: 0, 1, 2, 3, 4, 5;
 
 // media query
 $media-query: (
@@ -55,5 +59,5 @@ $media-query: (
   md: 1366,
   sm: 1000,
   xs: 768,
-)
+);
 
