--- a/scss/border/border-color-status.scss
+++ b/scss/border/border-color-status.scss
@@ -4,7 +4,9 @@
   .h\:bc-#{$n}:hover,
   .a\:bc-#{$n}:active,
   .f\:bc-#{$n}:focus{border-color: transparentize($border-color, 1 - $n / 10)}
+}
 
+@each $n in $colors-value {
   @each $key, $val in $colors{
     .h\:bc-#{$key}-#{$n}:hover,
     .a\:bc-#{$key}-#{$n}:active,
