--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -49,7 +49,7 @@ $colors: (
   orange: #ffbb00,
   red: #ff4111,
 );
-$colors-value: 2, 4, 6, 8, 10;
+$colors-value: 1, 2, 4, 6, 8, 10;
 
 // media query
 $media-query: (
