默认样式优化

--- a/scss/init.scss
+++ b/scss/init.scss
@@ -16,7 +16,8 @@ input, button, textarea, select, button{
   font-size: inherit;outline: none;
   background-color: transparent;
   font-family: inherit;box-sizing: border-box;
-  appearance: none;-webkit-appearance:none;
+  -webkit-appearance:none;appearance: none;
+  border-style: solid;
 }
 
 ::placeholder{color: inherit;opacity: 0.6;}
