--- a/scss/font/font-color-dark-status.scss
+++ b/scss/font/font-color-dark-status.scss
@@ -1,7 +1,11 @@
 @import '../variable';
 
 @each $n in $text-color-value {
-  .dk.h\:c-#{$n}:hover, .h\:c-#{$n} .dk:hover, .dk .h\:c-#{$n}:hover,
-  .dk.a\:c-#{$n}:active, .a\:c-#{$n} .dk:active, .dk .a\:c-#{$n}:active,
+  .dk.h\:c-#{$n}:hover, .h\:c-#{$n} .dk:hover, .dk .h\:c-#{$n}:hover{color: transparentize($text-color-dark, 1 - $n / 10)}
+}
+@each $n in $text-color-value {
   .dk.f\:c-#{$n}:focus, .f\:c-#{$n} .dk:focus, .dk .f\:c-#{$n}:active{color: transparentize($text-color-dark, 1 - $n / 10)}
+}
+@each $n in $text-color-value {
+  .dk.a\:c-#{$n}:active, .a\:c-#{$n} .dk:active, .dk .a\:c-#{$n}:active{color: transparentize($text-color-dark, 1 - $n / 10)}
 }
