--- a/scss/border/border-color-status.scss
+++ b/scss/border/border-color-status.scss
@@ -1,15 +1,27 @@
 @import '../variable';
 
 @each $n in $border-color-value {
-  .h\:bc-#{$n}:hover,
-  .a\:bc-#{$n}:active,
+  .h\:bc-#{$n}:hover{border-color: transparentize($border-color, 1 - $n / 10)}
+}
+@each $n in $border-color-value {
   .f\:bc-#{$n}:focus{border-color: transparentize($border-color, 1 - $n / 10)}
+}
+@each $n in $border-color-value {
+  .a\:bc-#{$n}:active{border-color: transparentize($border-color, 1 - $n / 10)}
 }
 
 @each $n in $colors-value {
   @each $key, $val in $colors{
-    .h\:bc-#{$key}-#{$n}:hover,
-    .a\:bc-#{$key}-#{$n}:active,
+    .h\:bc-#{$key}-#{$n}:hover{border-color: transparentize($val, 1 - $n / 10)}
+  }
+}
+@each $n in $colors-value {
+  @each $key, $val in $colors{
     .f\:bc-#{$key}-#{$n}:focus{border-color: transparentize($val, 1 - $n / 10)}
+  }
+}
+@each $n in $colors-value {
+  @each $key, $val in $colors{
+    .a\:bc-#{$key}-#{$n}:active{border-color: transparentize($val, 1 - $n / 10)}
   }
 }
